--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
 -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,29 +23,60 @@
     android:orientation="vertical"
     tools:context="com.example.android.miwok.MainActivity">
 
-    <TextView
-        android:id="@+id/numbers"
-        style="@style/CategoryStyle"
-        android:background="@color/category_numbers"
-        android:text="@string/category_numbers"
-        android:onClick="goToNumber"/>
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <TextView
-        android:id="@+id/family"
-        style="@style/CategoryStyle"
-        android:background="@color/category_family"
-        android:text="@string/category_family" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
-    <TextView
-        android:id="@+id/colors"
-        style="@style/CategoryStyle"
-        android:background="@color/category_colors"
-        android:text="@string/category_colors" />
+        </android.support.v7.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/phrases"
-        style="@style/CategoryStyle"
-        android:background="@color/category_phrases"
-        android:text="@string/category_phrases" />
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </LinearLayout>
+
+<!--<TextView-->
+<!--android:id="@+id/numbers"-->
+<!--style="@style/CategoryStyle"-->
+<!--android:background="@color/category_numbers"-->
+<!--android:text="@string/category_numbers"-->
+<!--android:onClick="goToNumber"/>-->
+
+<!--<TextView-->
+<!--android:id="@+id/family"-->
+<!--style="@style/CategoryStyle"-->
+<!--android:background="@color/category_family"-->
+<!--android:text="@string/category_family" />-->
+
+<!--<TextView-->
+<!--android:id="@+id/colors"-->
+<!--style="@style/CategoryStyle"-->
+<!--android:background="@color/category_colors"-->
+<!--android:text="@string/category_colors" />-->
+
+<!--<TextView-->
+<!--android:id="@+id/phrases"-->
+<!--style="@style/CategoryStyle"-->
+<!--android:background="@color/category_phrases"-->
+<!--android:text="@string/category_phrases" />-->
+
